fix handler not found

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "disposable-email-domains": "^1.0.52",
     "http": "0.0.0",
     "pg": "^7.18.2",
+    "querystring": "^0.2.0",
     "url": "^0.11.0"
   }
 }
